Describe exactly what is the goal of IObject

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,7 @@
 OBJ=tools.obj
 all:	$(OBJ)
 
-$(OBJ) :	DebugGL.o Shader.o Texture.o
+$(OBJ) :	DebugGL.o Shader.o Texture.o RcManager.o
 	ld -o $@ -Ur $^
 %.o: %.cpp
 	$(CXX) -c $^ $(CFLAGS)
