--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(GLib GL)
 if (win)
 	set(GLib opengl32)
 endif (win)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 #Declaration of executable
 add_executable(
