Use some c++14 (c++1y) feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ file(
 	src/*
 )
 set(GLib GL)
-set(Extra_CXX_Flags "-Wall -std=c++11")
+set(Extra_CXX_Flags "-Wall -std=c++1y")
 if (win)
 	set(GLib opengl32)
 endif (win)
