--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,9 @@ if(UNIX)
 	PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image >=2.0.0)
 	include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
+	PKG_SEARCH_MODULE(ASSIMP REQUIRED assimp)
+	include_directories(${ASSIMP_INCLUDE_DIRS})
+	target_link_libraries(${PROJECT_NAME} ${ASSIMP_LIBRARIES})
 else ()
 	# Use new module to find SDL2
 endif ()
