Add Boost as a dependency for signals2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,5 @@ if (GLEW_FOUND)
 else (GLEW_FOUND)
 	message(FATAL_ERROR "libGLEW not found")
 endif (GLEW_FOUND)
+find_package(Boost REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
