--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ compiler:
   - clang
 
 before_install:
+  - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y libglm-dev libglew-dev libassimp-dev libsdl2-dev libsdl2-image-dev 
+  - sudo apt-get install -qq -y libglm-dev 
+  - sudo apt-get install -qq -y libglew-dev 
+  - sudo apt-get install -qq -y libassimp-dev 
+  - sudo apt-get install -qq -y libsdl2-dev 
+  - sudo apt-get install -qq -y libsdl2-image-dev 
 
 script:
   - bundle exec cmake . && bundle exec make
