--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 
 compiler:
   - clang
+  - gcc
 
 before_install:
   - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
@@ -14,5 +15,8 @@ before_install:
   - sudo apt-get install -qq -y libsdl2-image-dev 
 
 script:
-  - bundle exec cmake . && bundle exec make
+  - cmake . && make
+branches:
+  only:
+  - master
 
