some minor change to build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,14 +33,10 @@ if(UNIX)
 	PKG_SEARCH_MODULE(ASSIMP REQUIRED assimp)
 	include_directories(${ASSIMP_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${ASSIMP_LIBRARIES})
+	PKG_SEARCH_MODULE(GLEW REQUIRED glew)
+	include_directories(${GLEW_INCLUDE_DIRS})
+	target_link_libraries(${PROJECT_NAME} ${GLEW_LIBRARIES})
 else (UNIX)
 	# Use new module to find SDL2
 endif (UNIX)
 
-find_package(GLEW)
-if (GLEW_FOUND)
-	target_include_directories(${PROJECT_NAME} PUBLIC ${GLEW_INCLUDE_DIR})
-	target_link_libraries(${PROJECT_NAME} ${GLEW_LIBRARY})
-else (GLEW_FOUND)
-	message(FATAL_ERROR "libGLEW not found")
-endif (GLEW_FOUND)
