--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ compiler:
 before_install:
   - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
   - sudo apt-get update -qq
+  - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq -y g++-4.8; fi
+  - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
   - sudo apt-get install -qq -y libglm-dev 
   - sudo apt-get install -qq -y libglew-dev 
   - sudo apt-get install -qq -y libassimp-dev 
