--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ compiler:
 
 before_install:
   - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo add-apt-repository ppa:boost-latest/ppa -y 
   - sudo apt-get update -qq
   - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq -y g++-4.8; fi
   - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
