--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,12 +28,15 @@ if(UNIX)
 	include(FindPkgConfig)
 	PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
 	PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image >=2.0.0)
+	message("SDL2 include dir: " ${SDL2_INCLUDE_DIRS})
 	include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
 	PKG_SEARCH_MODULE(ASSIMP REQUIRED assimp)
+	message("Assimp include dir: " ${ASSIMP_INCLUDE_DIRS})
 	include_directories(${ASSIMP_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${ASSIMP_LIBRARIES})
 	PKG_SEARCH_MODULE(GLEW REQUIRED glew)
+	message("GLEW include dir: " ${GLEW_INCLUDE_DIRS})
 	include_directories(${GLEW_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${GLEW_LIBRARIES})
 else (UNIX)
