--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo apt-get install -qq -y libassimp-dev 
   - sudo apt-get install -qq -y libsdl2-dev 
   - sudo apt-get install -qq -y libsdl2-image-dev 
-
+  - ls /usr/include/assimp
 script:
   - cmake . && make
 branches:
