--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:boost-latest/ppa -y 
+  - sudo add-apt-repository ppa:openrave/release -y
   - sudo apt-get update -qq
   - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq -y g++-4.8; fi
   - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
@@ -17,7 +18,6 @@ before_install:
   - sudo apt-get install -qq -y libassimp-dev 
   - sudo apt-get install -qq -y libsdl2-dev 
   - sudo apt-get install -qq -y libsdl2-image-dev 
-  - ls /usr/include/assimp
 script:
   - cmake . && make
 branches:
