--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ before_install:
   - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
   - sudo apt-get install -qq -y libglm-dev 
   - sudo apt-get install -qq -y libglew-dev 
-  - sudo apt-get install -qq -y libassimp-dev 
+  - sudo apt-get install -qq -y libassimp3-dev 
   - sudo apt-get install -qq -y libsdl2-dev 
   - sudo apt-get install -qq -y libsdl2-image-dev 
+  - ls /usr/include/assimp
 script:
   - cmake . && make
 branches:
