--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo add-apt-repository -y 'ppa:zoogie/sdl2-snapshots'
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:boost-latest/ppa -y 
+  - sudo add-apt-repository -y 'ppa:dartsim/ppa' 
   - sudo apt-get update -qq
   - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq -y g++-4.8; fi
   - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
@@ -16,9 +17,8 @@ before_install:
   - sudo apt-get install -qq -y libglew-dev 
   - sudo apt-get install -qq -y libsdl2-dev 
   - sudo apt-get install -qq -y libsdl2-image-dev 
+  - sudo apt-get install -qq -y libassimp-dev
 
-install:
-  - ./tools/dependency.sh
 script:
   - cmake . && make
 branches:
