--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.3)
+# Use version 2.8 because of Travis
+cmake_minimum_required(VERSION 2.8)
 
 #Configuration of project
 #Here is the library
