--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,9 @@ clang-3.9:
        - ./tools/ci/clang39.sh
     image: debian:unstable
 
+gcc-6.1:
+    stage: build
+    script:
+       - ./tools/ci/gcc61.sh
+    image: debian:unstable
+
