--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:gcc-6:
        - ./tools/ci/gcc6.sh
     image: debian:unstable
 
-test:clang-3.9
+test:clang-3.9:
     stage: test
     script:
       - ./tools/ci/test.sh
@@ -26,7 +26,7 @@ test:clang-3.9
       paths:
         - build/out-coverage
 
-test:gcc-6
+test:gcc-6:
     stage: test
     script:
       - ./tools/ci/test.sh
