--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,24 +2,42 @@ variables:
     GIT_SUBMODULE_STRATEGY: recursive
 stages:
     - build
+    - test
     - documentation
 
-# for clang don't use test for now ( need to use llvm-cov gcov instead of gcov )
 build:clang-3.9:
     stage: build
     script:
        - ./tools/ci/clang39.sh
+    artifacts:
+      untracked: true
     image: debian:unstable
 
 build:gcc-6:
     stage: build
     script:
        - ./tools/ci/gcc6.sh
-       - ./tools/ci/test.sh
+    artifacts:
+      untracked: true
+    image: debian:unstable
+
+test:clang-3.9:
+    stage: test
+    dependencies:
+      - build:clang-3.9
+    script:
+      - ./tools/ci/simpleTest.sh
+
+
+test:gcc-6:
+    stage: test
+    dependencies:
+      - build:gcc-6
+    script:
+      - ./tools/ci/test.sh
     artifacts:
       paths:
         - build/out-coverage
-    image: debian:unstable
 
 documentation:
      stage: documentation
