use standard dependency naming

--- a/meson.build
+++ b/meson.build
@@ -8,8 +8,9 @@ glmdep = dependency('glm',required:true)
 
 gtestdep = dependency('gtest',required:false,main:false,fallback:['gtest','gtest_mainless_dep'])
 
-incdir = include_directories('src')
-
+simple3dengine_inc = include_directories('src')
 subdir('src')
+
+simple3dengine_dep = declare_dependency(link_with:simple3dengine_lib,include_directories:simple3dengine_inc)
 
 subdir('tests/Parser')
