--- a/tests/Parser/meson.build
+++ b/tests/Parser/meson.build
@@ -1,8 +1,7 @@
 parser_source = [ 'test_parser.cpp','test_parser.h','test_main.cpp']
 
 test_exe = executable('TestParser' , parser_source,
-                       dependencies:gtestdep,
-                       link_with:simple3dengine,
-                       include_directories:incdir)
+                       dependencies:[gtestdep,simple3dengine_dep]
+                     )
 
 test('TestParser', test_exe)
