add virtual to Shader destructor

--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,12 @@
 project('Simple3DEngine','cpp', default_options : ['cpp_std=c++1z'])
 
-sdl2dep = dependency('sdl2',required:true)
-sdl2imagedep = dependency('SDL2_image',required:true)
-assimpdep = dependency('assimp',required:true)
-glewdep = dependency('glew',required:true)
-glmdep = dependency('glm',required:true)
+sdl2_dep = dependency('sdl2',required:true)
+sdl2image_dep = dependency('SDL2_image',required:true)
+assimp_dep = dependency('assimp',required:true)
+glew_dep = dependency('glew',required:true)
+glm_dep = dependency('glm',required:true)
 
-gtestdep = dependency('gtest',required:false,main:false,fallback:['gtest','gtest_mainless_dep'])
+gtest_dep = dependency('gtest',required:false,main:false,fallback:['gtest','gtest_mainless_dep'])
 
 simple3dengine_inc = include_directories('src')
 subdir('src')
