--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-include_engine = [
+include_engine = files([
   'engine/Camera.h',
   'engine/CEntity.h',
   'engine/Engine-main.h',
@@ -13,11 +13,12 @@ include_engine = [
   'engine/Shader.h',
   'engine/ShadowMap.h',
   'engine/SkyboxShader.h'
-]
-include_misc =[
+  ])
+include_misc = files([
   'misc/Input.h'
-]
-include_tools =[
+])
+
+include_tools = files([
   'tools/BasicMeshManager.h',
   'tools/CubemapTexture.h',
   'tools/DebugGL.h',
@@ -26,12 +27,12 @@ include_tools =[
   'tools/Parser.h',
   'tools/SDL_Tools.h',
   'tools/Texture.h'
-]
-include_window =[
+])
+include_window = files([
   'window/Graphics.h',
   'window/Window.h'
-]
-source_engine  = [
+])
+source_engine  = files([
   'engine/Camera.cpp',
   'engine/CEntity.cpp',
   'engine/Engine-main.cpp',
@@ -45,22 +46,22 @@ source_engine  = [
   'engine/Shader.cpp',
   'engine/ShadowMap.cpp',
   'engine/SkyboxShader.cpp'
-]
-source_misc =[
+])
+source_misc = files([
   'misc/Input.cpp'
-]
-source_tools =[
+])
+source_tools = files([
   'tools/BasicMeshManager.cpp',
   'tools/CubemapTexture.cpp',
   'tools/DebugGL.cpp',
   'tools/Loader.cpp',
   'tools/Parser.cpp',
   'tools/Texture.cpp'
-]
-source_window = [
+])
+source_window = files([
   'window/Graphics.cpp',
   'window/Window.cpp'
-]
+])
 
 simple3dengineSrc =[
   include_engine,include_misc,include_tools,include_window,
