use correct path for assimp header, in preparation of version 4.1.0

--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,7 @@ assimp_dep = dependency('assimp',required:true)
 glew_dep = dependency('glew',required:true)
 glm_dep = dependency('glm',required:true)
 
-gtest_dep = dependency('gtest',required:false,main:false,fallback:['gtest','gtest_mainless_dep'])
+gtest_dep = dependency('',required:false,fallback:['gtest','gtest_mainless_dep'])
 
 simple3dengine_inc = include_directories('src')
 subdir('src')
@@ -14,6 +14,7 @@ subdir('src')
 simple3dengine_dep = declare_dependency(link_with:simple3dengine_lib,include_directories:simple3dengine_inc)
 
 subdir('tests/Parser')
+
 
 # cppcheck section
 cppcheck_exe = find_program('cppcheck',required:false)
