move unnit test in src

--- a/meson.build
+++ b/meson.build
@@ -19,9 +19,9 @@ test_list = ['Parser']
 
 foreach tst : test_list
   exe = executable('@0@Test'.format(tst),
-                   ['tests/@0@/main.cpp'.format(tst),
-                    'tests/@0@/@0@_test.h'.format(tst),
-                    'tests/@0@/@0@_test.cpp'.format(tst)],
+                   ['src/tests/@0@/main.cpp'.format(tst),
+                    'src/tests/@0@/@0@_test.h'.format(tst),
+                    'src/tests/@0@/@0@_test.cpp'.format(tst)],
                   dependencies : [gtest_dep,simple3dengine_dep])
   test('@0@ Test'.format(tst), exe)
 endforeach
